fixed header padding and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -60,25 +60,21 @@ h2 {
 
 .hero-content {
   width: 100%;
-  height: 80%;
   max-height: 70vh;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  flex-flow: row wrap; }
-  .hero-content .hero-content {
-    flex-grow: 2;
-    flex-shrink: 1; }
+  position: relative;
+  margin: 0 auto;
+  padding-top: 3em; }
   .hero-content .hero-logo {
     display: none; }
   .hero-content .brand-header-logo {
     display: inline-block;
-    max-height: 100%; }
+    max-height: 100%;
+    position: relative; }
   .hero-content .about-blurb {
-    margin: 3em  1em 1em;
-    flex-grow: 1; }
+    margin: 0 auto;
+    padding-top: .75em;
+    display: block; }
     .hero-content .about-blurb .link-to-more {
       padding: .25em 1em; }
 
@@ -195,8 +191,7 @@ button {
 
 .about-blurb {
   background: url("../images/blurb-accent.png") top left no-repeat;
-  background-size: 2em;
-  padding-top: .75em; }
+  background-size: 2em; }
 
 h1 {
   font-family: Slabo, sans-serif;
@@ -241,8 +236,7 @@ button {
     font-size: 1.25em; }
 
 .about-blurb {
-  font-size: 2.4em;
-  font-size: 6vw; }
+  font-size: 2.2em; }
 
 .aside-title {
   font-family: 'Montserrat', sans-serif;
@@ -345,14 +339,19 @@ button {
 @media only screen and (min-width: 768px) {
   h2 {
     margin-bottom: 1.2em; }
+  .hero-content .about-blurb,
+  .about-section .subsection,
+  .contact-section .contact-form {
+    width: 75%; }
+  .hero-content {
+    padding-top: 4em; }
+  .hero-content .about-blurb {
+    width: 60%; }
   .content-section {
     padding: 1.6em; }
   .about-section {
     padding: 3em; }
-    .about-section .subsection {
-      width: 75%; }
   .portfolio-article {
     width: 25%; }
   .contact-section .contact-form {
-    margin: 0 auto;
-    width: 75%; } }
+    margin: 0 auto; } }
